2019-11-14 Jan Kotanski <jan.kotanski@desy.de>
	* skip disconnected image source
	* tagged as 2.27.1

2019-11-13 Jan Kotanski <jan.kotanski@desy.de>
	* add freeze and clear actions for bottomplot in LineCut
	* tagged as 2.27.0

2019-11-13 Jan Kotanski <jan.kotanski@desy.de>
	* fix for showing frame widgets if fid is 0
	* tagged as 2.26.1

2019-11-13 Jan Kotanski <jan.kotanski@desy.de>
	* rearrange frame widgets
	* restore frame config on a fail of loading a file
	* add frame widgets for none-nexus files
	* show framerate only if image source is on
	* tagged as 2.26.0

2019-11-08 Jan Kotanski <jan.kotanski@desy.de>
	* add ToolRefreshTime to settings
	* tagged as 2.25.0

2019-11-07 Jan Kotanski <jan.kotanski@desy.de>
	* add --memory-buffer command-line parameter
	* add --channel command-line parameter
	* tagged as 2.24.0

2019-11-06 Jan Kotanski <jan.kotanski@desy.de>
	* add tab focus in configuration widget
	* tagged as 2.23.2

2019-11-06 Jan Kotanski <jan.kotanski@desy.de>
	* fix for maximal memory buffer size
	* tagged as 2.23.1

2019-11-06 Jan Kotanski <jan.kotanski@desy.de>
	* add maximal memory buffer size
	* tagged as 2.23.0

2019-11-05 Jan Kotanski <jan.kotanski@desy.de>
	* fix for reseting memory buffer
	* tagged as 2.22.1

2019-11-05 Jan Kotanski <jan.kotanski@desy.de>
	* set lazy slider to default
	* add memory buffer
	* tagged as 2.22.0

2019-10-29 Jan Kotanski <jan.kotanski@desy.de>
	* add calcvariance switch
	* tagged as 2.21.0

2019-10-28 Jan Kotanski <jan.kotanski@desy.de>
	* fix for switching tools between rgb and not rgb
	* tagged as 2.20.1

2019-10-28 Jan Kotanski <jan.kotanski@desy.de>
	* add LavueState to LavueController
	* tagged as 2.20.0

2019-10-25 Jan Kotanski <jan.kotanski@desy.de>
	* fix for max of None in python3
	* tagged as 2.19.2

2019-10-25 Jan Kotanski <jan.kotanski@desy.de>
	* fix a bug for unset geometry parameters
	* tagged as 2.19.1

2019-10-24 Jan Kotanski <jan.kotanski@desy.de>
	* add step to frame slide
	* tagged as 2.19.0
