@@ -1,5 +1,6 @@
 2019-11-14 Jan Kotanski <jan.kotanski@desy.de>
 	* skip disconnected image source
+	* improve passing configuration to image source
 	* tagged as 2.27.1
 
 2019-11-13 Jan Kotanski <jan.kotanski@desy.de>
